--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Stanley Dai - Portfolio">
+  <meta name="description" content="Stanley Dai - Website">
   <meta name="keywords" content="Stanley Dai, Data, Visualization, New York">
   <meta name="author" content="Stanley Dai">
   <meta property="og:image" content="assets/project_photo/Preview_Thumbnail.png">
