--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 	<div id="nav">
 	  <a href="https://stanleydai.github.io/" class="no_undersocre">Home</a>
-	  <a href="writings.html" class="no_undersocre">Writings</a>
+	  <a href="writings.html" class="no_undersocre">Policy</a>
 
 	</div>
 
@@ -36,8 +36,10 @@
 	            <div class="text-center">
 	                <h1 class="text-left page-header">Hello! I'm Stanley Dai.</h1>
 	                <br>
-	                <p class="text-left intro_text">I'm interested in data science, writing, and education policy.</p>
-	                <p class="text-left intro_text">As part of the <a href="http://ledeprogram.com" target="_blank">Lede Program</a>, I'm working on data visualization techniques. Here are some projects!</p>
+	                <p class="text-left intro_text">I'm a data scientist. Currently, I am exploring the use of statistical techniques to solve problems in ecology and conservation. 
+						Previously, I worked at <a href="http://mdrc.org" target="_blank">MDRC</a>, where I researched barriers to success for community college students.
+					</p>
+	                <p class="text-left intro_text">I am pursuing an <a href="https://statistics.ucdavis.edu/grad/ms" target="_blank">M.S. in Statistics at UC Davis</a> (expected graduation fall 2025). Some of my work is below!</p>
 	                <br>
 	            </div>
 	        </div>
@@ -45,28 +47,59 @@
 
 	<div id="portfolio">
 		<ul>
+
+		<li id='asapw'>
+				<img class="portfolio_pic" src="assets/asap.png">
+				<p class="headline"><a href="https://mdrc.org/sites/default/files/Westchester_ASAP_Brief_Final.pdf">Three-Year Findings from the Viking
+				ROADS Randomized Control Trial</a>
+				</p>
+				<p class="tools">Tools: SAS, R</p>
+		 </li>			
+			
 		<li id='fireflies'>
 		  		<img class="portfolio_pic" src="assets/firefliesSS.png">
 		  		<p class="headline"><a href="https://stanleydai.github.io/fireflies/">Mapping firefly observations across the US</a></p>
 		  		<p class="tools">Tools: Python, D3, Datawrapper, ai2html, Adobe Illustrator</p>
 		</li>
+
+		<li id='sta223'>
+			<img class="portfolio_pic" src="assets/sta223.png">
+			<p class="headline"><a href="sta223.html">Does binning your trash reduce rat sightings? Evaluating NYC’s new containerization policy</a>
+			</p>
+			<p class="tools">Tools: R, Markdown</p>
+		  </li>
+
+		  <li id='outdoorchess'>
+			<img class="portfolio_pic" src="assets/outdoorchessSS.png">
+			<p class="headline"><a href="https://stanleydai.github.io/outdoorchess/">Walk with me: how Manhattan's four distinct chess scenes experience and optimize their game
+		  </a></p>
+			<p class="tools">Tools: Mapbox, D3, Adobe Illustrator</p>
+  		</li>
+
 		<li id='himalaya_authors'>
-		  		<img class="portfolio_pic" src="assets/himalauthorsSS.png">
-		  		<p class="headline"><a href="https://stanleydai.github.io/himalaya_authors/">The human urge to climb our tallest mountains, and the equally human urge to document it for sale</a></p>
-		  		<p class="tools">Tools: Python, API's, Datawrapper, Adobe Illustrator</p>
-		</li>
-		<li id='outdoorchess'>
-		  		<img class="portfolio_pic" src="assets/outdoorchessSS.png">
-		  		<p class="headline"><a href="https://stanleydai.github.io/outdoorchess/">Walk with me: how Manhattan's four distinct chess scenes experience and optimize their game
-                </a></p>
-		  		<p class="tools">Tools: Mapbox, D3, Adobe Illustrator</p>
-		</li>
+			<img class="portfolio_pic" src="assets/himalauthorsSS.png">
+			<p class="headline"><a href="https://stanleydai.github.io/himalaya_authors/">The human urge to climb our tallest mountains, and the equally human urge to document it for sale</a></p>
+			<p class="tools">Tools: Python, API's, Datawrapper, Adobe Illustrator</p>
+  		</li>
+
+		  <li id='sta207'>
+			<img class="portfolio_pic" src="assets/sta207.png">
+			<p class="headline"><a href="sta207.html">Evaluating Project STAR with Mixed-Effect Regression Models</a>
+			</p>
+			<p class="tools">Tools: R, Markdown</p>
+		  </li>
+
+
 		<li id='nba_rookies_age'>
 		  		<img class="portfolio_pic" src="assets/nbarookiesSS.png">
 		  		<p class="headline"><a href="https://stanleydai.github.io/nba_rookies_age/">NBA rookies and their contributions
                 </a></p>
 		  		<p class="tools">Tools: Python, Datawrapper, Adobe Illustrator</p>
 		</li>
+
+
+
+
 
 		</ul>
 	</div>
