--- a/index.html
+++ b/index.html
@@ -45,9 +45,18 @@
 	        </div>
 	</div>
 
+	
 	<div id="portfolio">
 		<ul>
 
+		<li id='magpie'>
+				<img class="portfolio_pic" src="assets/magpie.png">
+				<p class="headline"><a href="assets/magpie regression.pdf" target="_blank">Do yellow-billed magpies respond variably to West Nile risk over space and time?</a>
+				</p> 
+				<p class="tools">Tools: ArcGIS, R</p>
+		 </li>	
+
+			
 		<li id='asapw'>
 				<img class="portfolio_pic" src="assets/asap.png">
 				<p class="headline"><a href="https://mdrc.org/sites/default/files/Westchester_ASAP_Brief_Final.pdf">Three-Year Findings from the Viking
