--- a/writings.html
+++ b/writings.html
@@ -28,6 +28,12 @@
 
 	        <div class="header">
 	            <div class="text-center">
+
+
+                  <h1 class="text-left page-header">Classes</h1>
+                  <br>
+                                  <p class="text-left intro_text"> Spatial Epidemiology, Quantitative Methods in Mathematical Biology, Mathematical Statistics I and II, Probability Theory, Multivariate Data Analysis, Statistical Methods in Machine Learning, Computational Statistics, Generalized Linear Models, Statistical Methods for Research I and II</p>
+                                  <br>
 	                <h1 class="text-left page-header">As a technical research analyst at <a href="http://www.mdrc.org" target="_blank">MDRC...</a></h1>
 	                <br>
 	                <p class="text-left intro_text">I've had opportunities to evaluate many postsecondary eduation programs.</p>
