--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	            <div class="text-center">
 	                <h1 class="text-left page-header">Hello! I'm Stanley Dai.</h1>
 	                <br>
-	                <p class="text-left intro_text">I'm a data scientist. Currently, I am exploring the use of statistical techniques to solve problems in ecology and conservation. 
+	                <p class="text-left intro_text">I'm a data scientist. Currently, I am exploring the use of machine learning techniques to solve problems in ecology and conservation as part of <a href="https://xdong05.github.io" target="_blank">the Dong Lab</a>. 
 						Previously, I worked at <a href="http://mdrc.org" target="_blank">MDRC</a>, where I researched barriers to success for community college students.
 					</p>
 	                <p class="text-left intro_text">I am pursuing an <a href="https://statistics.ucdavis.edu/grad/ms" target="_blank">M.S. in Statistics at UC Davis</a> (expected graduation fall 2025). Some of my work is below!</p>
